# inform-gateway

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile  README.md  copier.yml  debug_mcp.py  dev.sh  extract_mcp_tokens.py  nixpacks.toml  package.json  pyproject.toml  railway.json
.github/scripts/: promote_tools.py
.github/workflows/: auto_pr.yml  auto_promote.yml  ci.yml  distribute.yml  qa_agent_review.yml
.inform/: README.md
.inform/qa/: README.md
catalog/: catalog.yaml
docs/: google-auth-onboarding.md  template-and-distribution.md  template-followups.md  template-smoke-test.md
local-workspace/: .env.example  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md
local-workspace/.claude/: AGENTS.md  CLAUDE.md  settings.json
local-workspace/context/: mcp-registry.md  operator-profile.md
local-workspace/notes/: CONTINUE-revops-prospecting.md  revops-ai-infra-prospects.md
local-workspace/sessions/: 2026-03-31-0000-workspace-onboarding.md  2026-03-31-1200-exa-mcp-connect.md  2026-04-01-0000-exa-gateway-mcp-install.md  2026-04-01-1239-mcp-config-debugging.md  2026-04-02-0000-gateway-notes-tool-smoke-test.md  2026-04-03-0000-attio-mcp-setup.md  2026-04-03-1836-apollo-remote-gateway-testing.md  2026-04-03-2142-revops-ai-infra-prospecting.md  2026-04-04-0718-revops-prospecting-enrichment.md  2026-04-04-1113-gateway-notes-exploration.md
remote-gateway/: .env.example  CLAUDE.md  mcp_connections.example.json  mcp_connections.json  proxy_server.py  system_skills.json
remote-gateway/admin-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
remote-gateway/core/: admin_api.py  admin_dashboard.html  catalog_registrations.py  embeddings.py  field_registry.py  mcp_proxy.py  mcp_server.py  system_skills.py  telemetry.py
remote-gateway/docs/: custom-prompts.md  custom-tools.md
remote-gateway/prompts/: init.md
remote-gateway/tests/: conftest.py  test_admin_api.py  test_admin_routes.py  test_admin_tools.py  test_apollo_tools.py  test_attio_config.py  test_attio_tools.py  test_auth_middleware.py  test_decisions.py  test_delete_note_retry.py  test_dockerfile_credentials.py  test_embed_provider.py  test_embeddings.py  test_github_issues_adapter.py  test_google_analytics_config.py  test_google_analytics_fields.py  test_granola_tools.py  test_health_google_auth.py  test_init_gate.py  test_intent_overrides.py  test_issues.py  test_migrate_notes_issues_to_files.py  test_migrate_notes_to_folders.py  test_notes.py  test_notes_adapter.py  (+24 more)
scratch/: attio_payloads_v3.jsonl  claude-admin-vs-camber-core.md  company_upsert_plan.jsonl  upload_websummit_leads.py
scripts/: check_catalog_copier_sync.py  google_auth_setup.py  install_integration.py  migrate_notes_issues_to_files.py  migrate_notes_to_folders.py  test_check_catalog_copier_sync.py  test_google_auth_setup.py  test_install_integration.py
(+238 files in other folders)
