[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inform-gateway"
version = "0.1.0"
description = "Agentic GitOps monorepo: local R&D sandbox + centralized MCP gateway"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "anyio",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "httpx",
    "pyyaml",
    "psycopg2-binary",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest",
    "python-dotenv",
    "ruff",
    "pytest-postgresql",
    "psycopg[binary]",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".claude/worktrees",
    ".worktrees",
    "scratch",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["remote-gateway/tests", "scripts"]
